exports[`test individual 1`] = `
Object {
  "field": Object {
    "cellDataGetter": null,
    "cellRenderer": null,
    "data": null,
    "dataKey": Array [
      "individual"
    ],
    "headerCellRenderer": null,
    "label": "individual"
  },
  "size": Object {
    "height": 1,
    "width": 1
  },
  "type": "field"
}
`;

exports[`test individual.study 1`] = `
Object {
  "size": Object {
    "height": 2,
    "width": 1
  },
  "stack": Array [
    Object {
      "field": Object {
        "cellDataGetter": null,
        "cellRenderer": null,
        "data": null,
        "dataKey": Array [
          "individual"
        ],
        "headerCellRenderer": null,
        "label": "individual"
      },
      "size": Object {
        "height": 1,
        "width": 1
      },
      "type": "field"
    },
    Object {
      "field": Object {
        "cellDataGetter": null,
        "cellRenderer": null,
        "data": null,
        "dataKey": Array [
          "study"
        ],
        "headerCellRenderer": null,
        "label": "study"
      },
      "size": Object {
        "height": 1,
        "width": 1
      },
      "type": "field"
    }
  ],
  "type": "stack"
}
`;

exports[`test individual:select(name,age) 1`] = `
Object {
  "size": Object {
    "height": 2,
    "width": 2
  },
  "stack": Array [
    Object {
      "field": Object {
        "cellDataGetter": null,
        "cellRenderer": null,
        "data": null,
        "dataKey": Array [
          "individual"
        ],
        "headerCellRenderer": null,
        "label": "individual"
      },
      "size": Object {
        "height": 1,
        "width": 1
      },
      "type": "field"
    },
    Object {
      "group": Array [
        Object {
          "field": Object {
            "cellDataGetter": null,
            "cellRenderer": null,
            "data": null,
            "dataKey": Array [
              "individual",
              "name"
            ],
            "headerCellRenderer": null,
            "label": "name"
          },
          "size": Object {
            "height": 1,
            "width": 1
          },
          "type": "field"
        },
        Object {
          "field": Object {
            "cellDataGetter": null,
            "cellRenderer": null,
            "data": null,
            "dataKey": Array [
              "individual",
              "age"
            ],
            "headerCellRenderer": null,
            "label": "age"
          },
          "size": Object {
            "height": 1,
            "width": 1
          },
          "type": "field"
        }
      ],
      "size": Object {
        "height": 1,
        "width": 2
      },
      "type": "group"
    }
  ],
  "type": "stack"
}
`;

exports[`test individual:select(name,study:select(label)) 1`] = `
Object {
  "size": Object {
    "height": 3,
    "width": 2
  },
  "stack": Array [
    Object {
      "field": Object {
        "cellDataGetter": null,
        "cellRenderer": null,
        "data": null,
        "dataKey": Array [
          "individual"
        ],
        "headerCellRenderer": null,
        "label": "individual"
      },
      "size": Object {
        "height": 1,
        "width": 1
      },
      "type": "field"
    },
    Object {
      "group": Array [
        Object {
          "field": Object {
            "cellDataGetter": null,
            "cellRenderer": null,
            "data": null,
            "dataKey": Array [
              "individual",
              "name"
            ],
            "headerCellRenderer": null,
            "label": "name"
          },
          "size": Object {
            "height": 1,
            "width": 1
          },
          "type": "field"
        },
        Object {
          "size": Object {
            "height": 2,
            "width": 1
          },
          "stack": Array [
            Object {
              "field": Object {
                "cellDataGetter": null,
                "cellRenderer": null,
                "data": null,
                "dataKey": Array [
                  "individual",
                  "study"
                ],
                "headerCellRenderer": null,
                "label": "study"
              },
              "size": Object {
                "height": 1,
                "width": 1
              },
              "type": "field"
            },
            Object {
              "group": Array [
                Object {
                  "field": Object {
                    "cellDataGetter": null,
                    "cellRenderer": null,
                    "data": null,
                    "dataKey": Array [
                      "individual",
                      "study",
                      "label"
                    ],
                    "headerCellRenderer": null,
                    "label": "label"
                  },
                  "size": Object {
                    "height": 1,
                    "width": 1
                  },
                  "type": "field"
                }
              ],
              "size": Object {
                "height": 1,
                "width": 1
              },
              "type": "group"
            }
          ],
          "type": "stack"
        }
      ],
      "size": Object {
        "height": 2,
        "width": 2
      },
      "type": "group"
    }
  ],
  "type": "stack"
}
`;
